--- a/about.html
+++ b/about.html
@@ -18,11 +18,13 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>Always aim high, work hard,<br>
         and care deeply about what you believe in</p></blockquote>
 
-    <p>Hey，I'm<strong>Hejie Cui(Henny Jie)</strong>，a Chinese girl and a coder. I'm now studing Software Engineering in Tongji University.</p>
+    <p>Hey，I'm<strong> Hejie Cui(Henny Jie)</strong>，a Chinese girl and a coder. I'm now studing Software Engineering in Tongji University.</p>
 
     <p></p>
 
-    <p>This is the website I made by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll</a> My Github homwpage is <a href="https://github.com/HennyJie">👉GitHub·HennyJie</a> and Facebook<a href="https://www.facebook.com/hejie.cui">👉HennyJie</a>。If you have any questions, just contact me~~</p>
+    <p>This is the website I made by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll.</a> </br>
+        My Github homwpage is <a href="https://github.com/HennyJie">👉GitHub·HennyJie</a> and Facebook<a href="https://www.facebook.com/hejie.cui">👉HennyJie</a>。</br>
+        If you have any questions, just contact me~~</p>
 
     <p></p>
     
