Delete Some Passages

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is HennyJie."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/githubhead.jpg"
 ---
 
 <!-- Language Selector -->
@@ -23,7 +23,7 @@ header-img: "img/post-bg-rwd.jpg"
     <p></p>
 
     <p>This is the website I made by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="http://jekyll.com.cn/">Jekyll.</a> <br />
-        My Github homwpage is <a href="https://github.com/HennyJie">👉GitHub·HennyJie</a> and Facebook<a href="https://www.facebook.com/hejie.cui">👉HennyJie</a>。<br />
+        My Github homwpage is <a href="https://github.com/HennyJie">👉GitHub·HennyJie</a> and Facebook <a href="https://www.facebook.com/hejie.cui">👉HennyJie</a>。<br />
         If you have any questions, just contact me~~</p>
 
     <p></p>
