--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is HennyJie."
-header-img: "img/home-bg.jpg"
+header-img: "img/home-bg-art.jpg"
 ---
 
 <!-- Language Selector -->
